Add editor to main page

--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -308,6 +308,9 @@
 
 <div class="content" role="main">
 
+  <!-- Editor -->
+  <app-rich-text-editor></app-rich-text-editor>
+
   <!-- Footer -->
   <footer>
     Love this?&nbsp;
