Bindding two way

--- a/app/src/app/components/rich-text-editor/rich-text-editor.component.html
+++ b/app/src/app/components/rich-text-editor/rich-text-editor.component.html
@@ -1,1 +1,2 @@
-<div #richtexteditor class="rich-text-editor" contenteditable="true"></div>
+<div #richtexteditor class="rich-text-editor" contenteditable="true" (input)="propagateChange($event.target.innerHTML)">
+</div>
