--- a/app/src/app/components/rich-text-editor/rich-text-editor.component.html
+++ b/app/src/app/components/rich-text-editor/rich-text-editor.component.html
@@ -1,2 +1,2 @@
-<div #richtexteditor class="rich-text-editor" contenteditable="true" (input)="propagateChange($event.target.innerHTML)">
+<div #richtexteditor class="rich-text-editor" contenteditable="true" (input)="onChange($event)" (focus)="onFocus()">
 </div>
